--- a/views/question.ejs
+++ b/views/question.ejs
@@ -8,6 +8,8 @@
                     </div>
                     <div class="card-body">
                         <form method="post" action="/saveQuestions">
+                            <label>Digite seu Nome</label>
+                            <input type="text" name="userName" placeholder="Seu nome aqui" class="form-control">
                             <label>Título</label>
                             <input type="text" name="title" placeholder="Título" class="form-control">
                             <br><label>Pergunta</label>
