--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,6 +20,10 @@
                         </div>
                         <div class="card-footer">
                                 <a class="btn btn-dark" href="/question/<%=question.id%>"> Responder</a>
+                                <form method="post" action="/deleteAnswer" style="display: inline;">
+                                    <input type="hidden" name="id" value="<%=question.id%>">
+                                    <button class="btn btn-danger">Deletar</button>
+                                </form>
                         </div>
                     </div>
 
